# smart_badge

./: .gitignore  README.md  USER_MANUAL.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.c  llama_jni_stub.c  sherpa_onnx_jni.c
app/src/main/res/drawable/: ic_notification_mic.xml
ios/: README.md
ios/SmartBadgeApp/SmartBadgeApp/: Info.plist
ios/SmartBadgeApp/SmartBadgeApp.xcodeproj/: project.pbxproj
ios/SmartBadgeApp/SmartBadgeApp/Core/ASR/: FunASRClient.swift
ios/SmartBadgeApp/SmartBadgeApp/Core/LLM/: LLMClient.swift
ios/SmartBadgeApp/SmartBadgeApp/Core/Service/: RecordingManager.swift
ios/SmartBadgeApp/SmartBadgeApp/Data/Repository/: VisitRepositoryImpl.swift
ios/SmartBadgeApp/SmartBadgeApp/UI/Detail/: DetailView.swift  DetailViewModel.swift
ios/SmartBadgeApp/SmartBadgeApp/UI/History/: HistoryView.swift  HistoryViewModel.swift
ios/SmartBadgeApp/SmartBadgeApp/UI/Home/: HomeView.swift  HomeViewModel.swift
ios/SmartBadgeApp/SmartBadgeApp/UI/Recording/: RecordingView.swift  RecordingViewModel.swift
ios/SmartBadgeApp/SmartBadgeApp/UI/Settings/: SettingsView.swift  SettingsViewModel.swift
ios/VoiceNote/VoiceNote/: Info.plist  VoiceNote-Bridging-Header.h  VoiceNote.swift
ios/VoiceNote/VoiceNote.xcodeproj/: project.pbxproj
ios/VoiceNote/VoiceNote/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/VoiceNote/VoiceNote/Core/ASR/: ASRTypes.swift  FunASRClient.swift  ModelDownloadManager.swift  OfflineASRClient.swift
ios/VoiceNote/VoiceNote/Core/Audio/: AudioCapture.swift  AudioPlayer.swift
ios/VoiceNote/VoiceNote/Core/DI/: AppContainer.swift
ios/VoiceNote/VoiceNote/Core/Database/: PersistenceController.swift
ios/VoiceNote/VoiceNote/Core/LLM/: LLMClient.swift
ios/VoiceNote/VoiceNote/Core/Location/: LocationTracker.swift
ios/VoiceNote/VoiceNote/Core/Service/: RecordingManager.swift
ios/VoiceNote/VoiceNote/Data/Repository/: VisitRepositoryImpl.swift
ios/VoiceNote/VoiceNote/Domain/Model/: Visit.swift  VisitSummary.swift
scripts/: download_sherpa_onnx_android.sh  start_funasr.sh  test_funasr.py
scripts/funasr-runtime-resources/models/workspace/: .mdl
(+63 files in other folders)
